replace projects in works section and fix spacing of page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,30 +46,36 @@ main {
     flex-direction: column;
     justify-content: center;
     align-content: center;
+    width: 100%;
 }
 
 .projects-whole {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    flex-direction: row;
     align-items: center;
+    width: 70%;
 }
 
-.projects-bottom-half {
+/* .projects-bottom-half {
     display: flex;
     flex-wrap: wrap;
     justify-content: center; 
-}
+    width: 100%;
+} */
 
 .works {
     display: flex;
     flex-direction: row;
     /* flex-wrap: wrap; */
     justify-content: center;
+    width: 100%;
+    margin-bottom: 50px;
 }
 
-.projects {
+/* .projects {
     flex: 0 1 33%;
-}
+} */
 
 section p{
     display: inline-block;
@@ -79,10 +85,18 @@ section p{
 .about-me {
     display:flex;
     flex-direction: row;
+    width: 100%;
+    margin-bottom: 50px;
+}
+
+
+
+.about-me p {
+    width: 70%;
 }
 
 .about-me h2, .works h2, .contact-me h2{
-    width: 20%;
+    width: 30%;
     border-right: black 3px solid;
     text-align: right;
     font-size: 45px;
@@ -93,7 +107,11 @@ section p{
 .contact-me ul li {
     display: inline-block;
     margin-left: 100px;
-    font-size: 30px;
+    font-size: 25px;
+}
+
+.contact-me ul {
+    width:70%;
 }
 
 footer {
@@ -101,54 +119,92 @@ footer {
     justify-content: space-evenly;
 }
 
+
+
 .first-assignment {
+    position: relative;
+    text-align: center;
     min-height: 100px;
     border: 1px solid black;
     /* padding: 1% 2%; */
-    width: 70%;
-    flex: 0 1 75%;
-}
-.placeholder, .second-assignment {
-    min-height: 200px;
-    border: 1px solid black;
-    padding: 1% 2%;
-    width: 30%;
-}
-
-.first-assignment h3, .first-assignment p{
-    padding: 5px;
-    background: purple;
-    color: #fff;
-    width: 200px;
-    font-size: 20px;
-    text-align: center;
-}
-
-.first-assignment img, .second-assignment img, .placeholder img{
     width: 100%;
+    /* flex: 0 1 75%; */
+}
+.second-assignment, .third-assignment {
+    position: relative;
+    text-align: center;
+    min-height: 100px;
+    border: 1px solid black;
+    width: 50%;
 }
 
-.placeholder h3, 
-.placeholder p,
-.second-assignment h3,
-.second-assignment p {
+/* .third-assignment{
+    height: 300px;
+} */
+
+.first-assignment p {
     padding: 5px;
     background: purple;
     color: #fff;
     width: 200px;
     font-size: 20px;
     text-align: center;
+    position: absolute;
+    top: 40px;
+    left: 16px;
+}
+
+.first-assignment h3{
+    padding: 5px;
+    background: purple;
+    color: #fff;
+    width: 200px;
+    font-size: 20px;
+    text-align: center;
+    position: absolute;
+    top: 8px;
+    left: 16px;
+}
+
+.first-assignment img, .second-assignment img, .third-assignment img{
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+}
+
+.second-assignment p,
+.third-assignment p {
+    padding: 5px;
+    background: purple;
+    color: #fff;
+    width: 150px;
+    font-size: 15px;
+    text-align: center;
+    position: absolute;
+    top: 35px;
+    left: 16px;
+}
+
+.second-assignment h3,
+.third-assignment h3 {
+    padding: 5px;
+    background: purple;
+    color: #fff;
+    width: 150px;
+    font-size: 15px;
+    text-align: center;
+    position: absolute;
+    top: 8px;
+    left: 16px;
 }
 
 @media screen and (max-width:767px){
     .about-me h2, .works h2, .contact-me h2{
-        width: 20%;
+        width: 50%;
         border: none;
         border-bottom: black 3px solid;
-        text-align: right;
         font-size: 45px;
-        margin-right: 30px;
-        padding-right: 30px;
+        margin-bottom: 20px;
         text-align: center;
     }
     .about-me, .works, .contact-me{
@@ -158,6 +214,10 @@ footer {
         display: flex;
         align-items: center;
         flex-direction: column;
+    }
+
+    .about-me p {
+        width: 90%;
     }
     .contact-me ul li {
         display: flex;
@@ -169,5 +229,15 @@ footer {
     header{
         display: flex;
         flex-direction: column;
+    }
+    .projects-whole {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+        width: 90%;
+    }
+    .second-assignment, .third-assignment {
+        width: 100%;
     }
 }
